Addded title and the buttons to change game type

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <title>Tic-Tac-Toe</title>
 </head>
 <body>
-  
+  <h1>Tic Tac Toe</h1>
+
+  <div class="game-type">
+    <button class="game" id="bot">PvAI</button>
+    <button class="game" id="human">PvP</button>
+  </div>
 </body>
 </html>
