Created the game interface

--- a/index.html
+++ b/index.html
@@ -12,7 +12,39 @@
 
   <div class="game-type">
     <button class="game" id="bot">PvAI</button>
-    <button class="game" id="human">PvP</button>
+    <button class="game active" id="human">PvP</button>
+  </div>
+
+  <main>
+    <div class="score-board">
+      <h2>Player 1</h2>
+      <h3>Luffy</h3>
+      <h4>0</h4>
+    </div>
+
+    <div class="game-body">
+      <span class="game-buttons"></span>
+      <span class="game-buttons"></span>
+      <span class="game-buttons"></span>
+      <span class="game-buttons"></span>
+      <span class="game-buttons"></span>
+      <span class="game-buttons"></span>
+      <span class="game-buttons"></span>
+      <span class="game-buttons"></span>
+      <span class="game-buttons"></span>
+    </div>
+
+    <div class="score-board">
+      <h2>Player 2</h2>
+      <h3>Gintoki</h3>
+      <h4>0</h4>
+    </div>
+  </main>
+
+  <div id="again">
+    <button id="restart" class="game">Play Again</button>
+
+    <p>Luffy's turn</p>
   </div>
 </body>
 </html>
