Added player and display methods

--- a/index.html
+++ b/index.html
@@ -18,33 +18,35 @@
   <main>
     <div class="score-board">
       <h2>Player 1</h2>
-      <h3>Luffy</h3>
-      <h4>0</h4>
+      <h3 id="player-one-name">Luffy</h3>
+      <h4 id="player-one-score">0</h4>
     </div>
 
     <div class="game-body">
-      <span class="game-buttons"></span>
-      <span class="game-buttons"></span>
-      <span class="game-buttons"></span>
-      <span class="game-buttons"></span>
-      <span class="game-buttons"></span>
-      <span class="game-buttons"></span>
-      <span class="game-buttons"></span>
-      <span class="game-buttons"></span>
-      <span class="game-buttons"></span>
+      <span class="game-buttons">&nbsp;</span>
+      <span class="game-buttons">&nbsp;</span>
+      <span class="game-buttons">&nbsp;</span>
+      <span class="game-buttons">&nbsp;</span>
+      <span class="game-buttons">&nbsp;</span>
+      <span class="game-buttons">&nbsp;</span>
+      <span class="game-buttons">&nbsp;</span>
+      <span class="game-buttons">&nbsp;</span>
+      <span class="game-buttons">&nbsp;</span>
     </div>
 
     <div class="score-board">
       <h2>Player 2</h2>
-      <h3>Gintoki</h3>
-      <h4>0</h4>
+      <h3 id="player-two-name">Gintoki</h3>
+      <h4 id="player-two-score">0</h4>
     </div>
   </main>
 
   <div id="again">
     <button id="restart" class="game">Play Again</button>
 
-    <p>Luffy's turn</p>
+    <p id="turn">Luffy's turn</p>
   </div>
+
+  <script src="./main.js"></script>
 </body>
 </html>
