Removed default names, added revealing module and made the text unselectable

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <main>
     <div class="score-board">
       <h2>Player 1</h2>
-      <h3 id="player-one-name">Luffy</h3>
+      <h3 id="player-one-name"></h3>
       <h4 id="player-one-score">0</h4>
     </div>
 
@@ -36,13 +36,13 @@
 
     <div class="score-board">
       <h2>Player 2</h2>
-      <h3 id="player-two-name">Gintoki</h3>
+      <h3 id="player-two-name"></h3>
       <h4 id="player-two-score">0</h4>
     </div>
   </main>
 
   <div id="again">
-    <button id="restart" class="game">Play Again</button>
+    <button id="restart" class="game">Play</button>
 
     <p id="turn">Luffy's turn</p>
   </div>
