Added game start and end functionality

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
     </div>
 
     <div class="game-body">
-      <span class="game-buttons">&nbsp;</span>
-      <span class="game-buttons">&nbsp;</span>
-      <span class="game-buttons">&nbsp;</span>
-      <span class="game-buttons">&nbsp;</span>
-      <span class="game-buttons">&nbsp;</span>
-      <span class="game-buttons">&nbsp;</span>
-      <span class="game-buttons">&nbsp;</span>
-      <span class="game-buttons">&nbsp;</span>
-      <span class="game-buttons">&nbsp;</span>
+      <button class="game-buttons">&nbsp;</button>
+      <button class="game-buttons">&nbsp;</button>
+      <button class="game-buttons">&nbsp;</button>
+      <button class="game-buttons">&nbsp;</button>
+      <button class="game-buttons">&nbsp;</button>
+      <button class="game-buttons">&nbsp;</button>
+      <button class="game-buttons">&nbsp;</button>
+      <button class="game-buttons">&nbsp;</button>
+      <button class="game-buttons">&nbsp;</button>
     </div>
 
     <div class="score-board">
@@ -42,7 +42,7 @@
   </main>
 
   <div id="again">
-    <button id="restart" class="game">Play</button>
+    <button id="restart" class="game">Start</button>
 
     <p id="turn">Luffy's turn</p>
   </div>
