Game now checks turn, win, loss, draw and updates score and text

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
     </div>
 
     <div class="game-body">
-      <button class="game-buttons">&nbsp;</button>
-      <button class="game-buttons">&nbsp;</button>
-      <button class="game-buttons">&nbsp;</button>
-      <button class="game-buttons">&nbsp;</button>
-      <button class="game-buttons">&nbsp;</button>
-      <button class="game-buttons">&nbsp;</button>
-      <button class="game-buttons">&nbsp;</button>
-      <button class="game-buttons">&nbsp;</button>
-      <button class="game-buttons">&nbsp;</button>
+      <button class="game-buttons" disabled></button>
+      <button class="game-buttons" disabled></button>
+      <button class="game-buttons" disabled></button>
+      <button class="game-buttons" disabled></button>
+      <button class="game-buttons" disabled></button>
+      <button class="game-buttons" disabled></button>
+      <button class="game-buttons" disabled></button>
+      <button class="game-buttons" disabled></button>
+      <button class="game-buttons" disabled></button>
     </div>
 
     <div class="score-board">
@@ -44,7 +44,7 @@
   <div id="again">
     <button id="restart" class="game">Start</button>
 
-    <p id="turn">Luffy's turn</p>
+    <p id="turn">player1's turn</p>
   </div>
 
   <script src="./main.js"></script>
