--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div id="again">
     <button id="restart" class="game">Start</button>
 
-    <p id="turn">player1's turn</p>
+    <p id="turn"></p>
   </div>
 
   <script src="./main.js"></script>
